[gd_scene load_steps=37 format=2]

[ext_resource path="res://tongue/tongue.tscn" type="PackedScene" id=1]
[ext_resource path="res://level/level.gd" type="Script" id=2]
[ext_resource path="res://frog/frog.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/objects.tres" type="TileSet" id=4]
[ext_resource path="res://ui/GGG.tres" type="DynamicFont" id=5]
[ext_resource path="res://level/tiles/ground.tres" type="TileSet" id=6]
[ext_resource path="res://level/Time Countdown.wav" type="AudioStream" id=7]
[ext_resource path="res://ui/ingame/gameover_label.gd" type="Script" id=8]
[ext_resource path="res://ui/ingame/score_label.gd" type="Script" id=9]
[ext_resource path="res://ui/transitions/transition_fov.tscn" type="PackedScene" id=10]
[ext_resource path="res://level/Time Up.wav" type="AudioStream" id=11]
[ext_resource path="res://ui/ingame/in-game_buttons_background.png" type="Texture" id=12]
[ext_resource path="res://ui/ingame/in-game_buttons.png" type="Texture" id=13]
[ext_resource path="res://night_environment.tscn" type="PackedScene" id=14]
[ext_resource path="res://ui/KristenITC_small.tres" type="DynamicFont" id=15]
[ext_resource path="res://ui/KristenITC.tres" type="DynamicFont" id=16]
[ext_resource path="res://ui/main menu/main.theme" type="Theme" id=17]
[ext_resource path="res://ui/main menu/help_title.png" type="Texture" id=18]
[ext_resource path="res://ui/main menu/frog_icon.png" type="Texture" id=19]
[ext_resource path="res://ui/main menu/controls_icon.png" type="Texture" id=20]
[ext_resource path="res://ui/main menu/background.png" type="Texture" id=21]
[ext_resource path="res://ui/main menu/gameplay_icon.png" type="Texture" id=22]
[ext_resource path="res://ui/ingame/help.gd" type="Script" id=23]

[sub_resource type="StreamTexture" id=9]
load_path = "res://.import/in-game_buttons.png-c2d658910bdcf2ff75830cc637b4ce60.stex"

[sub_resource type="AtlasTexture" id=4]
atlas = SubResource( 9 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="StreamTexture" id=10]
load_path = "res://.import/in-game_buttons.png-c2d658910bdcf2ff75830cc637b4ce60.stex"

[sub_resource type="AtlasTexture" id=6]
atlas = SubResource( 10 )
region = Rect2( 32, 16, 16, 16 )

[sub_resource type="StreamTexture" id=11]
load_path = "res://.import/in-game_buttons.png-c2d658910bdcf2ff75830cc637b4ce60.stex"

[sub_resource type="AtlasTexture" id=8]
atlas = SubResource( 11 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 13 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 13 )
region = Rect2( 32, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 13 )
region = Rect2( 16, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 13 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 13 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="Theme" id=18]

[node name="root" type="Node2D" groups=["daytime"]]
script = ExtResource( 2 )
minBugRadius = 20.0
bugBorderExclusion = 20
numFireflies = 15
numDragonflies = 5
daytimeModulateSpeed = 0.2

[node name="environment" parent="." instance=ExtResource( 14 )]

[node name="night_modulate" type="Node2D" parent="."]
modulate = Color( 0.423529, 0.486275, 1, 1 )

[node name="ground" type="TileMap" parent="night_modulate"]
z_index = -5
tile_set = ExtResource( 6 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 0, 3, 1, 0, 1, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 1, 6, 0, 2, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 2, 11, 0, 0, 12, 0, 3, 13, 0, 0, 14, 0, 0, 15, 0, 0, 65536, 0, 4, 65537, 0, 0, 65538, 0, 4, 65539, 0, 0, 65540, 0, 0, 65541, 0, 4, 65542, 0, 1, 65543, 0, 0, 65544, 0, 0, 65545, 0, 2, 65546, 0, 1, 65547, 1, 0, 65548, 1, 1, 65549, 1, 2, 65550, 0, 0, 65551, 0, 0, 131072, 0, 3, 131073, 0, 1, 131074, 0, 1, 131075, 0, 0, 131076, 1, 0, 131077, 1, 2, 131078, 0, 0, 131079, 0, 4, 131080, 0, 0, 131081, 0, 1, 131082, 0, 0, 131083, 1, 65536, 131084, 1, 65537, 131085, 1, 262144, 131086, 1, 2, 131087, 0, 1, 196608, 0, 0, 196609, 0, 3, 196610, 0, 0, 196611, 1, 0, 196612, 1, 262145, 196613, 1, 262144, 196614, 1, 1, 196615, 1, 2, 196616, 0, 3, 196617, 0, 0, 196618, 0, 1, 196619, 1, 131072, 196620, 1, 196609, 196621, 1, 65537, 196622, 1, 262144, 196623, 1, 1, 196624, 1, 2, 262144, 0, 4, 262145, 0, 1, 262146, 0, 2, 262147, 1, 65536, 262148, 1, 65537, 262149, 1, 65537, 262150, 1, 196608, 262151, 1, 131074, 262152, 0, 0, 262153, 0, 2, 262154, 0, 0, 262155, 0, 1, 262156, 1, 65536, 262157, 1, 65537, 262158, 1, 65537, 262159, 1, 65537, 262160, 1, 65538, 327680, 0, 1, 327681, 0, 0, 327682, 1, 0, 327683, 1, 262145, 327684, 1, 65537, 327685, 1, 196608, 327686, 1, 131074, 327687, 0, 1, 327688, 0, 0, 327689, 0, 3, 327690, 0, 0, 327691, 0, 1, 327692, 1, 65536, 327693, 1, 65537, 327694, 1, 65537, 327695, 1, 65537, 327696, 1, 65538, 393216, 0, 0, 393217, 0, 1, 393218, 1, 65536, 393219, 1, 65537, 393220, 1, 196608, 393221, 1, 131074, 393222, 0, 3, 393223, 0, 3, 393224, 0, 4, 393225, 0, 0, 393226, 0, 0, 393227, 1, 0, 393228, 1, 262145, 393229, 1, 65537, 393230, 1, 65537, 393231, 1, 65537, 393232, 1, 65538, 458752, 0, 0, 458753, 1, 0, 458754, 1, 262145, 458755, 1, 65537, 458756, 1, 65538, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 3, 458762, 0, 0, 458763, 1, 65536, 458764, 1, 65537, 458765, 1, 65537, 458766, 1, 65537, 458767, 1, 65537, 458768, 1, 65538, 524288, 0, 0, 524289, 1, 65536, 524290, 1, 65537, 524291, 1, 65537, 524292, 1, 65538, 524293, 0, 0, 524294, 0, 3, 524295, 0, 0, 524296, 0, 4, 524297, 0, 2, 524298, 0, 0, 524299, 1, 131072, 524300, 1, 131073, 524301, 1, 196609, 524302, 1, 65537, 524303, 1, 65537, 524304, 1, 65538, 589824, 0, 0, 589825, 1, 131072, 589826, 1, 196609, 589827, 1, 65537, 589828, 1, 262144, 589829, 1, 2, 589830, 0, 2, 589831, 0, 2, 589832, 0, 2, 589833, 0, 3, 589834, 0, 2, 589835, 0, 4, 589836, 0, 0, 589837, 1, 131072, 589838, 1, 131073, 589839, 1, 131073, 589840, 1, 131074, 655360, 0, 0, 655361, 0, 3, 655362, 1, 65536, 655363, 1, 65537, 655364, 1, 65537, 655365, 1, 262144, 655366, 1, 2, 655367, 0, 3, 655368, 0, 4, 655369, 0, 0, 655370, 0, 1, 655371, 0, 4, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 3, 720896, 0, 1, 720897, 0, 0, 720898, 1, 131072, 720899, 1, 196609, 720900, 1, 65537, 720901, 1, 196608, 720902, 1, 131074, 720903, 0, 2, 720904, 0, 0, 720905, 0, 0, 720906, 0, 2, 720907, 1, 0, 720908, 1, 1, 720909, 1, 2, 720910, 0, 2, 720911, 0, 0, 786432, 0, 0, 786433, 0, 3, 786434, 0, 0, 786435, 1, 131072, 786436, 1, 131073, 786437, 1, 131074, 786438, 0, 1, 786439, 0, 0, 786440, 0, 1, 786441, 1, 0, 786442, 1, 1, 786443, 1, 262145, 786444, 1, 65537, 786445, 1, 262144, 786446, 1, 1, 786447, 1, 1, 786448, 1, 2, 851968, 0, 0, 851969, 0, 0, 851970, 0, 0, 851971, 0, 1, 851972, 0, 0, 851973, 0, 0, 851974, 0, 1, 851975, 0, 1, 851976, 1, 0, 851977, 1, 262145, 851978, 1, 65537, 851979, 1, 65537, 851980, 1, 65537, 851981, 1, 65537, 851982, 1, 65537, 851983, 1, 65537, 851984, 1, 65538, 917512, 1, 131072, 917513, 1, 131073, 917514, 1, 131073, 917515, 1, 131073, 917516, 1, 131073, 917517, 1, 131073, 917518, 1, 131073, 917519, 1, 131073, 917520, 1, 131074 )

[node name="flowers" type="TileMap" parent="night_modulate"]
z_index = -1
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 65538, 2, 65536, 196617, 2, 196608, 524298, 2, 65536, 655361, 2, 0, 655375, 2, 0, 786438, 2, 131072 )

[node name="objects" type="TileMap" parent="night_modulate"]
z_index = -1
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
collision_layer = 4
collision_mask = 2
format = 1
tile_data = PoolIntArray( 65545, 1, 2, 65550, 0, 2, 131078, 0, 0, 196610, 1, 1, 262155, 0, 2, 393217, 0, 1, 524293, 0, 1, 589836, 0, 1, 655369, 1, 2, 720910, 1, 0, 786434, 0, 1, 786440, 0, 1 )

[node name="frog" parent="night_modulate" instance=ExtResource( 3 )]
position = Vector2( 128, 112 )

[node name="frog_modulate" type="Node2D" parent="."]
modulate = Color( 0.568627, 0.584314, 0.807843, 1 )

[node name="tongue" parent="frog_modulate" instance=ExtResource( 1 )]
unique_name_in_owner = true
position = Vector2( 128, 112 )
z_index = -1

[node name="UI" type="Control" parent="."]
light_mask = 0
margin_right = 256.0
margin_bottom = 224.0
mouse_filter = 2

[node name="ScoreLabel" type="Label" parent="UI"]
light_mask = 0
margin_left = 6.0
margin_top = 7.0
margin_right = 108.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 5 )
text = "Score 00000000"
valign = 1
script = ExtResource( 9 )

[node name="TimeLabel" type="Label" parent="UI"]
light_mask = 0
margin_left = 6.0
margin_top = 21.0
margin_right = 57.0
margin_bottom = 35.0
custom_fonts/font = ExtResource( 5 )
text = "Time 20"
valign = 1

[node name="GameoverLabel" type="Label" parent="UI"]
visible = false
light_mask = 0
margin_left = 50.0
margin_top = 63.0
margin_right = 207.0
margin_bottom = 165.0
custom_fonts/font = ExtResource( 5 )
text = "Game Over!"
align = 1
valign = 1
script = ExtResource( 8 )

[node name="MenuTexture" type="TextureRect" parent="UI"]
light_mask = 0
anchor_left = 1.0
anchor_right = 1.0
margin_left = -80.0
margin_bottom = 22.0
mouse_filter = 2
input_pass_on_modal_close_click = false
texture = ExtResource( 12 )

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MenuTexture"]
light_mask = 0
anchor_left = 1.0
anchor_right = 1.0
margin_left = -48.0
margin_bottom = 16.0
mouse_filter = 0
input_pass_on_modal_close_click = false
custom_constants/separation = 0

[node name="RestartButton" type="TextureButton" parent="UI/MenuTexture/HBoxContainer"]
light_mask = 0
margin_right = 16.0
margin_bottom = 16.0
input_pass_on_modal_close_click = false
texture_normal = SubResource( 4 )
texture_pressed = SubResource( 6 )
texture_hover = SubResource( 8 )

[node name="HelpButton" type="TextureButton" parent="UI/MenuTexture/HBoxContainer"]
light_mask = 0
margin_left = 16.0
margin_right = 32.0
margin_bottom = 16.0
input_pass_on_modal_close_click = false
toggle_mode = true
texture_normal = SubResource( 12 )
texture_pressed = SubResource( 13 )
texture_hover = SubResource( 14 )

[node name="HomeButton" type="TextureButton" parent="UI/MenuTexture/HBoxContainer"]
light_mask = 0
margin_left = 32.0
margin_right = 48.0
margin_bottom = 16.0
input_pass_on_modal_close_click = false
texture_normal = SubResource( 15 )
texture_pressed = SubResource( 16 )
texture_hover = SubResource( 17 )

[node name="Help" type="NinePatchRect" parent="UI"]
visible = false
light_mask = 0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 27.0
input_pass_on_modal_close_click = false
texture = ExtResource( 21 )
patch_margin_left = 20
patch_margin_top = 23
patch_margin_right = 20
patch_margin_bottom = 23
script = ExtResource( 23 )

[node name="Header&Contents" type="VBoxContainer" parent="UI/Help"]
light_mask = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
input_pass_on_modal_close_click = false

[node name="Header" type="MarginContainer" parent="UI/Help/Header&Contents"]
light_mask = 0
margin_right = 256.0
margin_bottom = 60.0
mouse_filter = 2
input_pass_on_modal_close_click = false
custom_constants/margin_top = 24
custom_constants/margin_bottom = 4

[node name="Title" type="TextureRect" parent="UI/Help/Header&Contents/Header"]
light_mask = 0
margin_top = 24.0
margin_right = 256.0
margin_bottom = 56.0
mouse_filter = 2
input_pass_on_modal_close_click = false
texture = ExtResource( 18 )
stretch_mode = 4

[node name="Contents" type="MarginContainer" parent="UI/Help/Header&Contents"]
light_mask = 0
margin_top = 64.0
margin_right = 256.0
margin_bottom = 197.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 18 )
custom_constants/margin_right = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 30

[node name="Scroll" type="ScrollContainer" parent="UI/Help/Header&Contents/Contents"]
light_mask = 0
margin_left = 20.0
margin_right = 236.0
margin_bottom = 103.0
size_flags_vertical = 3
theme = ExtResource( 17 )

[node name="Items" type="VBoxContainer" parent="UI/Help/Header&Contents/Contents/Scroll"]
light_mask = 0
margin_right = 216.0
margin_bottom = 646.0
mouse_filter = 2
input_pass_on_modal_close_click = false
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AboutTitle" type="MarginContainer" parent="UI/Help/Header&Contents/Contents/Scroll/Items"]
light_mask = 0
margin_right = 208.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
mouse_filter = 2
input_pass_on_modal_close_click = false

[node name="Text" type="RichTextLabel" parent="UI/Help/Header&Contents/Contents/Scroll/Items/AboutTitle"]
light_mask = 0
margin_right = 208.0
margin_bottom = 20.0
size_flags_vertical = 3
custom_colors/font_color_shadow = Color( 0.356863, 0.192157, 0.219608, 1 )
custom_fonts/normal_font = ExtResource( 16 )
bbcode_enabled = true
bbcode_text = "[center]About[/center]"
meta_underlined = false
text = "About"
scroll_active = false
deselect_on_focus_loss_enabled = false

[node name="AboutContents" type="HBoxContainer" parent="UI/Help/Header&Contents/Contents/Scroll/Items"]
light_mask = 0
margin_top = 24.0
margin_right = 208.0
margin_bottom = 146.0
mouse_filter = 2
input_pass_on_modal_close_click = false
alignment = 1

[node name="FlatIcon" type="TextureRect" parent="UI/Help/Header&Contents/Contents/Scroll/Items/AboutContents"]
light_mask = 0
margin_right = 52.0
margin_bottom = 122.0
mouse_filter = 2
input_pass_on_modal_close_click = false
texture = ExtResource( 19 )

[node name="Text" type="RichTextLabel" parent="UI/Help/Header&Contents/Contents/Scroll/Items/AboutContents/FlatIcon"]
light_mask = 0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 14.0
margin_top = 48.0
margin_right = -6.0
margin_bottom = -36.0
mouse_filter = 2
input_pass_on_modal_close_click = false
size_flags_horizontal = 3
custom_colors/font_color_shadow = Color( 0.356863, 0.192157, 0.219608, 1 )
custom_constants/shadow_offset_y = 1
custom_fonts/normal_font = ExtResource( 15 )
bbcode_enabled = true
bbcode_text = "[center]Yum![/center]"
meta_underlined = false
text = "Yum!"
scroll_active = false
deselect_on_focus_loss_enabled = false

[node name="Roles" type="MarginContainer" parent="UI/Help/Header&Contents/Contents/Scroll/Items/AboutContents"]
light_mask = 0
margin_left = 56.0
margin_right = 208.0
margin_bottom = 122.0
mouse_filter = 2
input_pass_on_modal_close_click = false
size_flags_horizontal = 3

[node name="List" type="HBoxContainer" parent="UI/Help/Header&Contents/Contents/Scroll/Items/AboutContents/Roles"]
light_mask = 0
margin_right = 152.0
margin_bottom = 122.0
size_flags_horizontal = 3
alignment = 1

[node name="Items" type="RichTextLabel" parent="UI/Help/Header&Contents/Contents/Scroll/Items/AboutContents/Roles/List"]
light_mask = 0
margin_right = 152.0
margin_bottom = 122.0
rect_clip_content = false
mouse_filter = 2
input_pass_on_modal_close_click = false
size_flags_horizontal = 3
custom_colors/font_color_shadow = Color( 0.356863, 0.192157, 0.219608, 1 )
custom_constants/shadow_offset_y = 1
custom_fonts/normal_font = ExtResource( 15 )
bbcode_enabled = true
bbcode_text = "[center]You play as Froggy the Frog, and you must aid him to eat as many bugs as possible in under 20 seconds!
Move his tongue around to get the delicious treats![/center]"
meta_underlined = false
text = "You play as Froggy the Frog, and you must aid him to eat as many bugs as possible in under 20 seconds!
Move his tongue around to get the delicious treats!"
scroll_active = false
deselect_on_focus_loss_enabled = false

[node name="ControlsTitle" type="MarginContainer" parent="UI/Help/Header&Contents/Contents/Scroll/Items"]
light_mask = 0
margin_top = 150.0
margin_right = 208.0
margin_bottom = 170.0
rect_min_size = Vector2( 0, 20 )
mouse_filter = 2
input_pass_on_modal_close_click = false

[node name="Text" type="RichTextLabel" parent="UI/Help/Header&Contents/Contents/Scroll/Items/ControlsTitle"]
light_mask = 0
margin_right = 208.0
margin_bottom = 20.0
size_flags_vertical = 3
custom_colors/font_color_shadow = Color( 0.356863, 0.192157, 0.219608, 1 )
custom_fonts/normal_font = ExtResource( 16 )
bbcode_enabled = true
bbcode_text = "[center]Controls[/center]"
meta_underlined = false
text = "Controls"
scroll_active = false
deselect_on_focus_loss_enabled = false

[node name="ControlsContents" type="HBoxContainer" parent="UI/Help/Header&Contents/Contents/Scroll/Items"]
light_mask = 0
margin_top = 174.0
margin_right = 208.0
margin_bottom = 356.0
mouse_filter = 2
input_pass_on_modal_close_click = false
alignment = 1

[node name="FlatIcon" type="TextureRect" parent="UI/Help/Header&Contents/Contents/Scroll/Items/ControlsContents"]
light_mask = 0
margin_right = 74.0
margin_bottom = 182.0
mouse_filter = 2
input_pass_on_modal_close_click = false
texture = ExtResource( 20 )

[node name="Roles" type="MarginContainer" parent="UI/Help/Header&Contents/Contents/Scroll/Items/ControlsContents"]
light_mask = 0
margin_left = 78.0
margin_right = 208.0
margin_bottom = 182.0
mouse_filter = 2
input_pass_on_modal_close_click = false
size_flags_horizontal = 3

[node name="List" type="HBoxContainer" parent="UI/Help/Header&Contents/Contents/Scroll/Items/ControlsContents/Roles"]
light_mask = 0
margin_right = 130.0
margin_bottom = 182.0
size_flags_horizontal = 3
alignment = 1

[node name="Items" type="RichTextLabel" parent="UI/Help/Header&Contents/Contents/Scroll/Items/ControlsContents/Roles/List"]
light_mask = 0
margin_right = 130.0
margin_bottom = 182.0
mouse_filter = 2
input_pass_on_modal_close_click = false
size_flags_horizontal = 3
custom_colors/font_color_shadow = Color( 0.356863, 0.192157, 0.219608, 1 )
custom_constants/shadow_offset_y = 1
custom_fonts/normal_font = ExtResource( 15 )
bbcode_enabled = true
bbcode_text = "[center]Hold the left mouse button (LMB) to stretch out the tongue, and release the LMB to retract it.

Move the mouse while holding LMB to catch multiple bugs in one go.
[/center]"
meta_underlined = false
text = "Hold the left mouse button (LMB) to stretch out the tongue, and release the LMB to retract it.

Move the mouse while holding LMB to catch multiple bugs in one go.
"
scroll_active = false
deselect_on_focus_loss_enabled = false

[node name="Gameplay" type="MarginContainer" parent="UI/Help/Header&Contents/Contents/Scroll/Items"]
light_mask = 0
margin_top = 360.0
margin_right = 208.0
margin_bottom = 380.0
rect_min_size = Vector2( 0, 20 )
mouse_filter = 2
input_pass_on_modal_close_click = false

[node name="Text" type="RichTextLabel" parent="UI/Help/Header&Contents/Contents/Scroll/Items/Gameplay"]
light_mask = 0
margin_right = 208.0
margin_bottom = 20.0
size_flags_vertical = 3
custom_colors/font_color_shadow = Color( 0.356863, 0.192157, 0.219608, 1 )
custom_fonts/normal_font = ExtResource( 16 )
bbcode_enabled = true
bbcode_text = "[center]Gameplay[/center]"
meta_underlined = false
text = "Gameplay"
scroll_active = false
deselect_on_focus_loss_enabled = false

[node name="GameplayContents" type="HBoxContainer" parent="UI/Help/Header&Contents/Contents/Scroll/Items"]
light_mask = 0
margin_top = 384.0
margin_right = 208.0
margin_bottom = 646.0
mouse_filter = 2
input_pass_on_modal_close_click = false

[node name="FlatIcon" type="TextureRect" parent="UI/Help/Header&Contents/Contents/Scroll/Items/GameplayContents"]
light_mask = 0
margin_right = 74.0
margin_bottom = 262.0
mouse_filter = 2
input_pass_on_modal_close_click = false
texture = ExtResource( 22 )

[node name="Roles" type="MarginContainer" parent="UI/Help/Header&Contents/Contents/Scroll/Items/GameplayContents"]
light_mask = 0
margin_left = 78.0
margin_right = 208.0
margin_bottom = 262.0
mouse_filter = 2
input_pass_on_modal_close_click = false
size_flags_horizontal = 3

[node name="List" type="HBoxContainer" parent="UI/Help/Header&Contents/Contents/Scroll/Items/GameplayContents/Roles"]
light_mask = 0
margin_right = 130.0
margin_bottom = 262.0
size_flags_horizontal = 3

[node name="Items" type="RichTextLabel" parent="UI/Help/Header&Contents/Contents/Scroll/Items/GameplayContents/Roles/List"]
light_mask = 0
margin_right = 130.0
margin_bottom = 262.0
mouse_filter = 2
input_pass_on_modal_close_click = false
size_flags_horizontal = 3
custom_colors/font_color_shadow = Color( 0.356863, 0.192157, 0.219608, 1 )
custom_constants/shadow_offset_y = 1
custom_fonts/normal_font = ExtResource( 15 )
bbcode_enabled = true
bbcode_text = "[center]Each bug differs in score, so better keep an eye on them! Also, stacking bugs increases the multiplier and score as a result!

Hitting Froggy's own tongue or an object will retract it automatically, so be careful!

Lastly, beware of the Stinkbugs. They are not tasty, they stink, and will cost you some points.[/center]"
meta_underlined = false
text = "Each bug differs in score, so better keep an eye on them! Also, stacking bugs increases the multiplier and score as a result!

Hitting Froggy's own tongue or an object will retract it automatically, so be careful!

Lastly, beware of the Stinkbugs. They are not tasty, they stink, and will cost you some points."
scroll_active = false
deselect_on_focus_loss_enabled = false

[node name="transition" parent="." instance=ExtResource( 10 )]
light_mask = 0
margin_right = 256.0
margin_bottom = 224.0
mouse_filter = 2
input_pass_on_modal_close_click = false

[node name="countdown" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -20.0
bus = "SFX"

[node name="timeup" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -10.0
bus = "SFX"

[connection signal="final_daytime" from="." to="UI/GameoverLabel" method="_final_daytime"]
[connection signal="end_retract" from="frog_modulate/tongue" to="night_modulate/frog" method="_set_closed"]
[connection signal="start_extend" from="frog_modulate/tongue" to="night_modulate/frog" method="_open_in_direction"]
[connection signal="pressed" from="UI/MenuTexture/HBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="toggled" from="UI/MenuTexture/HBoxContainer/HelpButton" to="UI/Help" method="_on_HelpButton_toggled"]
[connection signal="pressed" from="UI/MenuTexture/HBoxContainer/HomeButton" to="." method="_on_HomeButton_pressed"]
[connection signal="animation_finished" from="transition/animator" to="." method="_fadein"]
[connection signal="animation_finished" from="transition/animator" to="." method="_restart_level"]
[connection signal="animation_finished" from="transition/animator" to="frog_modulate/tongue" method="_fadein"]

[editable path="transition"]
